updates to windows installation instruction
fixes
-old screenshots,
-configuration file which causes win service to crash on start
-ambiguity on the setup of JAVA_HOME
- general reorganization which is more integrated with the doc flow and a bit more gerarchic