@@ -5,9 +5,9 @@ title: Windows
 
 {% include base.html %}
 
-# openHAB on Windows
+# openHAB 3 on Windows
 
-The following instructions will guide you through the process of setting up openHAB.
+The following instructions will guide you through the process of setting up openHAB 3.
 
 This page is structured as follows:
 
@@ -16,24 +16,24 @@ This page is structured as follows:
 - TOC
 {:toc}
 
-## Prerequisites
+## Preparation of the environment.
 
-First, be sure to check that your system has the necessary [prerequisites]({{base}}/installation/index.html#prerequisites).
+### Before you start
+Please be sure you have installed the required supporting applications as described in [Prerequisites]({{base}}/installation/index.html#prerequisites).
 
-Add the `JAVA_HOME` System Environment Variable in Windows.
-Navigate to:
 
-- Control Panel ➡️ System and Security ➡️ System ➡️ Advanced System Settings ➡️ Environment Variables ➡️ System Variables
-
-Create a New System Variable based on your Java installation directory:
+### Set the `JAVA_HOME` System Environment Variable in Windows.
+  - Navigate to: Control Panel ➡️ System and Security ➡️ System ➡️ Advanced System Settings ➡️ Environment Variables ➡️ System Variables
+  - Create a New System Variable named JAVA_HOME (or update the existing one) to match the installation directory of the Java Platform chosen and installed in the step [Prerequisites]({{base}}/installation/index.html#prerequisites).
 
 ![JAVA_HOME](images/JAVA_HOME.png)
 
-The directory that openHAB is installed to must **contain no spaces**.
-On this page, we will be using `C:\openHAB` as an example.
+### Choose a folder name for the openHAB installation. 
+The name must **contain no spaces**. On this page, we will be using `C:\openHAB` as an example.
 
 ## Installation
 
+### Install openHAB
 The openHAB runtime is distributed using a platform-independent zip file.
 To install it, follow these simple steps:
 
@@ -41,46 +41,22 @@ To install it, follow these simple steps:
 
 2.  Unzip the file in your chosen directory (e.g. `C:\openHAB`)
 
+    ![openHAB 2 Folders](images/openHAB_3_Folders.png)
+
 3.  Start the server: Launch the runtime by executing the script `C:\openHAB\start.bat` and wait a while for it to start and complete.
 
     ![Karaf_Windows](images/Karaf_Windows.png)
 
 4.  Point your browser to `http://localhost:8080`.
-    You should now follow the first installation procedure.
+    You should be looking at the openHAB page requesting you to set up an administrator username and password:
+    
+![Home_OH_adminCreate](images/Home_OH_adminCreate.png)
+    
+You are now able to work in the openHAB environment, when launched using  `C:\openHAB\start.bat`. 
+You can choose to add a link to it on your Desktop, Taskbar or start menu as you deem more convenient.
+If you instead would like to have openHAB start automatically with Windows and run in the background, you can choose to install it as a service as described below.
 
-### File Locations
-
-Assuming a successful install, you will now have various folders inside `C:\openHAB`:
-
-|                                  | Windows Installation         |
-|:--------------------------------:|:-----------------------------|
-| openHAB application              | `C:\openHAB\runtime`        |
-| Additional add-on files          | `C:\openHAB\addons`         |
-| Site configuration               | `C:\openHAB\conf`           |
-| Log files                        | `C:\openHAB\userdata\logs`  |
-| Userdata like rrd4j databases    | `C:\openHAB\userdata`       |
-| Service configuration            | `C:\openHAB\userdata\etc`   |
-
-## Backup
-
-Make sure that you make regular backups of the **conf** and **userdata** folders, you can zip and unzip these folders too and from openHAB installations (even across most versions).
-When you have a setup that you are happy with, it would be a good idea to make a backup of the whole `C:\openHAB` folder.
-Which can be used any time after a failure.
-
-## Updating the openHAB Runtime
-
-To start the update process, run PowerShell as an administrator and use the following commands, while replacing `x.x.x` with the wanted openHAB version.
-Assuming you have openHAB installed in `C:\openHAB`:
-
-```shell
-cd C:\openHAB
-. .\runtime\bin\update.ps1
-Update-openHAB -OHVersion x.x.x
-```
-
-Now that openHAB has updated, you only need to run the above commands again for future versions.
-
-## Starting openHAB as a Service
+### Set up openHAB to run as a Windows Service
 
 By installing the openHAB process as a service in Windows, you can:
 
@@ -89,26 +65,25 @@ By installing the openHAB process as a service in Windows, you can:
 
 **Windows Service Installation Steps**
 
-1.  Complete the [prerequisites](#prerequisites) and regular [installation](#installation) steps, including the package selection
-
+1.  Complete the [prerequisites](#prerequisites) and regular [installation](#installation) steps.
 2.  Issue the following two commands in your openHAB console:
     ```shell
     feature:install service-wrapper
-    wrapper:install --name "openHAB" --display "openHAB" --description "openHAB Service"
+    wrapper:install --name "openHAB" --display "openHAB" --description "openHAB 3 Service"
     ```
 
     ![Wrapper Install_Windows](images/Wrapper_Install_Windows.jpg)
 
 3.  Shutdown the openHAB instance by typing `logout` in the currently running console.
 
-4.  Update the newly created `C:\openHAB\userdata\etc\openHAB-wrapper.conf` to include all necessary parameters.
+4.  Update the newly created `C:\openHAB\userdata\etc\openHAB-wrapper.conf` to include all necessary parameters:
 
     - Copy all the config text from the below section and paste it in your `openHAB-wrapper.conf`, replacing all existing content.
     - Adapt the first entry (`OPENHAB_HOME`) to match your openHAB installation directory.
 
     ```conf
     #*******************************************************
-    # openHAB-wrapper.conf for Windows Service Installation
+    # openHAB2-wrapper.conf for Windows Service Installation
     #*******************************************************
 
     # openHAB installation dir (Adapt this first setting to your system)
@@ -131,6 +106,8 @@ By installing the openHAB process as a service in Windows, you can:
     wrapper.java.mainclass=org.apache.karaf.wrapper.internal.service.Main
     wrapper.java.classpath.1=%KARAF_HOME%\lib\boot\*.jar
     wrapper.java.classpath.2=%KARAF_DATA%\lib\wrapper\*.jar
+    wrapper.java.classpath.3=%KARAF_HOME%\lib\jdk9plus\*.jar
+    wrapper.java.classpath.4=%KARAF_HOME%\lib\endorsed\*.jar
     wrapper.java.library.path.1=%KARAF_DATA%\lib\wrapper\
 
     # Java Parameters
@@ -141,19 +118,16 @@ By installing the openHAB process as a service in Windows, you can:
     wrapper.java.additional.5=-Dcom.sun.management.jmxremote
     wrapper.java.additional.6=-Dkaraf.startLocalConsole=false
     wrapper.java.additional.7=-Dkaraf.startRemoteShell=true
-    wrapper.java.additional.8=-Djava.endorsed.dirs="%JAVA_HOME%\jre\lib\endorsed;%JAVA_HOME%\lib\endorsed;%KARAF_HOME%\lib\endorsed"
-    wrapper.java.additional.9=-Djava.ext.dirs="%JAVA_HOME%\jre\lib\ext;%JAVA_HOME%\lib\ext;%KARAF_HOME%\lib\ext"
-    wrapper.java.additional.10=-Dopenhab.home="%OPENHAB_HOME%"
-    wrapper.java.additional.11=-Dopenhab.conf="%OPENHAB_HOME%\conf"
-    wrapper.java.additional.12=-Dopenhab.runtime="%OPENHAB_HOME%\runtime"
-    wrapper.java.additional.13=-Dopenhab.userdata="%OPENHAB_HOME%\userdata"
-    wrapper.java.additional.14=-Dopenhab.logdir="%OPENHAB_USERDATA%\logs"
-    wrapper.java.additional.15=-Dfelix.cm.dir="%OPENHAB_HOME%\userdata\config"
-    wrapper.java.additional.16=-Dorg.osgi.service.http.port=8080
-    wrapper.java.additional.17=-Dorg.osgi.service.http.port.secure=8443
-    wrapper.java.additional.18=-Djava.util.logging.config.file="%KARAF_ETC%\java.util.logging.properties"
-    wrapper.java.additional.19=-Dkaraf.logs="%OPENHAB_LOGDIR%"
-    wrapper.java.additional.20=-Dfile.encoding=UTF-8
+    wrapper.java.additional.8=-Dopenhab.home="%OPENHAB_HOME%"
+    wrapper.java.additional.9=-Dopenhab.conf="%OPENHAB_HOME%\conf"
+    wrapper.java.additional.10=-Dopenhab.runtime="%OPENHAB_HOME%\runtime"
+    wrapper.java.additional.11-Dopenhab.userdata="%OPENHAB_HOME%\userdata"
+    wrapper.java.additional.12=-Dopenhab.logdir="%OPENHAB_USERDATA%\logs"
+    wrapper.java.additional.13=-Dfelix.cm.dir="%OPENHAB_HOME%\userdata\config"
+    wrapper.java.additional.14=-Dorg.osgi.service.http.port=8080
+    wrapper.java.additional.15=-Dorg.osgi.service.http.port.secure=8443
+    wrapper.java.additional.16=-Djava.util.logging.config.file="%KARAF_ETC%\java.util.logging.properties"
+    wrapper.java.additional.17=-Dkaraf.logs="%OPENHAB_LOGDIR%"
     wrapper.java.maxmemory=512
 
     # Wrapper Logging Properties
@@ -198,10 +172,59 @@ By installing the openHAB process as a service in Windows, you can:
         ![Windows Service](images/Windows_Service.jpg)
 
     -   Logging in with an SSH client to the console (see info below)
+   
+
+### File Locations
+
+Assuming a successful install, you will now have various folders inside `C:\openHAB`:
+
+|                                  | Windows Installation         |
+|:--------------------------------:|:-----------------------------|
+| openHAB application              | `C:\openHAB\runtime`        |
+| Additional add-on files          | `C:\openHAB\addons`         |
+| Site configuration               | `C:\openHAB\conf`           |
+| Log files                        | `C:\openHAB\userdata\logs`  |
+| Userdata like rrd4j databases    | `C:\openHAB\userdata`       |
+| Service configuration            | `C:\openHAB\userdata\etc`   |
+
+## What next?
+You can:
+- continue reading the [Additional steps]({{base}}/installation/index.md#additional-steps) section of the Installation overview 
+- read more about how to handle basic maintenance tasks, in the section below
+
+## Maintenance
+
+
+### Backup
+
+Make sure that you make regular backups of the **conf** and **userdata** folders, you can zip and unzip these folders too and from openHAB installations (even across most versions).
+When you have a setup that you are happy with, it would be a good idea to make a backup of the whole `C:\openHAB` folder.
+Which can be used any time after a failure.
+
+### Updating the openHAB Runtime
+
+To start the update process, run PowerShell as an administrator and use the following commands, while replacing `x.x.x` with the wanted openHAB version.
+Assuming you have openHAB installed in `C:\openHAB`:
+
+```shell
+cd C:\openHAB
+. .\runtime\bin\update.ps1
+Update-openHAB -OHVersion x.x.x
+```
+Now that openHAB has updated, you only need to run the above commands again for future versions.
+
+### Uninstallation 
+- perform a backup as described above
+- uninstall openHAB as a Windows service: run PowerShell as an administrator and use the following commands
+```
+net stop openHAB
+C:\openHAB\userdata\bin\openHAB-service.bat remove
+```
+- you can delete the whole contents of the C:\openHAB\ folder.
 
 ### Connecting to the openHAB console
 
-You can connect to openHAB's console using the the `C:\openHAB\runtime\bin\client.bat` script on the local machine.
+You can connect to openHAB's console using the the `C:\openHAB\runtime\bin\client.bat` script on the local machine. 
 Alternatively, you can use a standard SSH client:
 
 -   Install an SSH client application, e.g., [Putty](https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html), [KiTTY](http://kitty.9bis.net/) or [Xshell 5](https://www.netsarang.com/products/xsh_overview.html)
